--- a/css/customer-reviews.css
+++ b/css/customer-reviews.css
@@ -45,13 +45,31 @@
     border: 1px solid #D4D4D4;
     padding: 15px;
     -webkit-border-radius: 4px;
-            border-radius: 4px; }
+            border-radius: 4px;
+    position: relative; }
+    .customer-reviews-section .review-body:after, .customer-reviews-section .review-body:before {
+      content: "\f0d9";
+      font-family: fontAwesome;
+      width: 60px;
+      height: 60px;
+      font-size: 32px;
+      color: #D4D4D4;
+      position: absolute;
+      top: 13%;
+      left: -12px;
+      /* Projects the arrow tot he direction that we want */ }
+    .customer-reviews-section .review-body:after {
+      left: -10px;
+      /* Helps create the border of the arrow */
+      color: #fff;
+      /* Same Background as the parent */ }
     .customer-reviews-section .review-body p {
       color: #B3B3B3; }
     .customer-reviews-section .review-body h4 {
       color: #4D4D4D; }
     .customer-reviews-section .review-body .review-mark {
-      color: #FFDD36; }
+      color: #FFDD36;
+      font-size: 18px; }
     .customer-reviews-section .review-body .review-product-img {
       display: -webkit-box;
       display: -webkit-flex;
