--- a/css/navbar.css
+++ b/css/navbar.css
@@ -27,7 +27,7 @@
       margin-left: 0; }
   .nav-bar .menu a {
     font-family: 'Roboto', sans-serif;
-    font-size: 18px;
+    font-size: 15px;
     color: #4D4D4D;
     cursor: pointer;
     text-decoration: none !important; }
