--- a/css/product-page-reviews.css
+++ b/css/product-page-reviews.css
@@ -2,8 +2,8 @@
   -webkit-box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.14), 0 0px 0px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
           box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.14), 0 0px 0px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
   background-color: #fff;
-  margin-top: 40px;
-  margin-bottom: 40px; }
+  margin-top: 24px;
+  margin-bottom: 25px; }
   .product-page-nav .col-sm-12 {
     padding: 0; }
 
@@ -70,8 +70,9 @@
         margin-left: 10px;
         color: #B3B3B3; }
       .product-reviews-section .product-rating-mark .total-rating i {
-        padding-right: 5px;
-        color: #FFDD36; }
+        padding-right: 4px;
+        color: #FFDD36;
+        font-size: 18px; }
   .product-reviews-section .review-item {
     width: 100%;
     padding: 25px 0 32px 0; }
@@ -82,11 +83,9 @@
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
-      display: flex;
-      -webkit-box-pack: justify;
-      -webkit-justify-content: space-between;
-          -ms-flex-pack: justify;
-              justify-content: space-between; }
+      display: flex; }
+    .product-reviews-section .review-item .progress {
+      margin: 0 8px; }
   .product-reviews-section .review-item-title {
     margin-bottom: 10px;
     color: #4D4D4D; }
@@ -157,19 +156,19 @@
               border-radius: 3px;
       content: '';
       display: block;
-      height: 24px;
+      height: 16px;
       -webkit-transition: 240ms;
       transition: 240ms;
-      width: 24px; }
+      width: 16px; }
     .product-reviews-section .product-add-review .reviews-options-item input[type="checkbox"]:checked:before, .product-reviews-section .product-add-review .reviews-options-item .checkbox-inline input[type="checkbox"]:checked:before {
       -webkit-transform: rotate(45deg);
       -ms-transform: rotate(45deg);
           transform: rotate(45deg);
       position: absolute;
-      left: 8px;
-      top: 4px;
+      left: 6px;
+      top: 1px;
       display: table;
-      width: 6px;
+      width: 5px;
       height: 12px;
       border: 2px solid #fff;
       border-top: 0;
@@ -182,9 +181,9 @@
       background-color: #D4D4D4;
       border-color: transparent; }
     .product-reviews-section .product-add-review .reviews-options-item .fa-star {
-      margin-right: 10px;
+      margin-right: 4px;
       color: #FFDD36;
-      font-size: 16px; }
+      font-size: 18px; }
   .product-reviews-section .add-review-btn {
     font-weight: 600;
     padding-right: 23px;
